# handler/updateOpening.go
@@ -6,6 +6,20 @@ import (
 	"net/http"
 )
 
+// @BasePath /api/v1
+
+// UpdateOpeningHandler @Summary Update opening
+// @Description Update a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening "identification"
+// @Param opening body UpdateOpeningRequest true "Opening data ro update"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 	request := UpdateOpeningRequest{}
 
